# freshservice_mcp

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  PR_MESSAGE.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  quality.yml
chart/: Chart.yaml  values.yaml
chart/dashboards/: freshservice-mcp.json
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: authentication.md  deployment.md  examples.md  tools-reference.md
src/freshservice_mcp/: auth.py  cache.py  config.py  http_client.py  server.py  server_legacy.py.bck  telemetry.py
src/freshservice_mcp/tools/: __init__.py  agents.py  assets.py  changes.py  departments.py  misc.py  problems.py  products.py  projects.py  releases.py  (+4 more)
tests/: conftest.py  test_agents_identity.py  test_assets_functional.py  test_auth.py  test_cache.py  test_cache_functional.py  test_changes_actions.py  test_changes_subtools.py  test_config.py  test_crud_error_paths.py  test_discovery.py  test_error_handling.py  test_error_paths.py  test_full_coverage.py  test_full_coverage_2.py  test_full_coverage_3.py  test_http_client.py  test_problems_actions.py  test_projects_actions.py  test_releases_subtools.py  test_remaining_tools.py  test_server.py  test_server_functional.py  test_status_page.py  test_status_page_actions.py  test_status_page_deep.py  test_subtools.py  test_telemetry.py  test_tool_actions.py  test_tool_actions_deep.py  test_tools.py
